modified:   16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb

--- a/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
@@ -336,54 +336,73 @@
     "\n",
     "\n",
     "    // METHODS -----------------------------------------------------------------\n",
-    "    //----------------------- I N S E R T I O N --------------------------------\n",
+    "    //------------------------- I N S E R T I O N ------------------------------\n",
     "    // Remove the specified node from the list of nodes\n",
-    "    private void InsertListNode( ListNode nodeToShift, ListNode previousNode, T element )\n",
+    "    private void InsertListNode( ListNode nodeToShift, ListNode prevNode, T element )\n",
     "    {\n",
     "        \n",
+    "        // First, we create a new node holding the specified element value\n",
     "        ListNode newNode = new ListNode( element );\n",
     "\n",
     "\n",
     "        // If we detect that the specified previous node is empty:\n",
-    "        if ( previousNode == null )\n",
+    "        if ( prevNode == null )\n",
     "        {\n",
     "\n",
-    "            // Then we must have the case where the head node\n",
-    "            // is to be shifted and replaced with the new node to be inserted,\n",
-    "            // so we must update the head node accordingly\n",
-    "            newNode.NextNode = nodeToShift.NextNode;\n",
+    "            // then we must have the case where we are inserting at the head,\n",
+    "            // so we first point the new node's next element to the head\n",
+    "            newNode.NextNode = nodeToShift;\n",
+    "\n",
+    "\n",
+    "            // We then shift the old head node over by one position  \n",
+    "            nodeToShift = nodeToShift.NextNode;\n",
+    "\n",
+    "\n",
+    "            // Lastly, we redesignate the new node as the new head\n",
     "            this.head = newNode;\n",
     "\n",
     "        }\n",
     "\n",
     "\n",
-    "        // Otherwise,\n",
-    "        // the target node could be some intermediate Node\n",
-    "        // residing in between the head and the tail:\n",
-    "        else\n",
+    "        // Additionally,\n",
+    "        // If the node to be shifted is in fact the tail:\n",
+    "        else if( object.ReferenceEquals( nodeToShift, this.tail ) ) \n",
     "        {\n",
     "\n",
-    "            // In that case, uncouple the target node by redirecting \n",
-    "            // it's previous and next node pointers, respectively\n",
-    "            newNode               = nodeToShift;\n",
-    "            nodeToShift           = nodeToShift.NextNode;\n",
-    "            previousNode.NextNode = newNode;\n",
-    "\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "        // Lastly,\n",
-    "        // If it is the case that the node to shift is the tail:\n",
-    "        if( object.ReferenceEquals(nodeToShift, this.tail) )\n",
-    "        {\n",
-    "\n",
+    "            // Simply Add the new node to the end of list\n",
     "            Add( element );\n",
+    "\n",
+    "\n",
+    "            // But we must be mindful to decrement the nodeCount\n",
+    "            // to account for the additional incrementation\n",
+    "            // which occurs during the Add() method\n",
+    "            this.nodeCount--;\n",
     "\n",
     "        } \n",
     "\n",
+    "\n",
+    "        // Otherwise,\n",
+    "        // the node to shift is some intermediate Node\n",
+    "        // residing after the head, up to, but NOT including the tail:\n",
+    "        else \n",
+    "        {\n",
+    "\n",
+    "            // Point the new node's next element to the node to shift\n",
+    "            newNode.NextNode = nodeToShift;\n",
+    "\n",
+    "\n",
+    "            // Shift the specified node to shift over by one positon\n",
+    "            nodeToShift = nodeToShift.NextNode;\n",
+    "\n",
+    "\n",
+    "            // Point the previous node's next element to the new node\n",
+    "            prevNode.NextNode = newNode;\n",
+    "\n",
+    "        }\n",
+    "\n",
     "    }\n",
     "    //--------------------------------------------------------------------------\n",
-    "    // Add a new element at the end of the list\n",
+    "    // Add a new node to the end of the list\n",
     "    public void Add( T element )\n",
     "    {\n",
     "\n",
@@ -561,7 +580,7 @@
     "    }  \n",
     "    //------------------------ D E L E T I O N ---------------------------------\n",
     "    // Remove the specified node from the list of nodes\n",
-    "    private void RemoveListNode( ListNode targetNode, ListNode previousNode )\n",
+    "    private void RemoveListNode( ListNode targetNode, ListNode prevNode )\n",
     "    {\n",
     "        \n",
     "        // If, by decrementing the node count, \n",
@@ -580,7 +599,7 @@
     "        // Conversely,\n",
     "        // should the node count be higher than zero,\n",
     "        // but we detect that the specified previous node is empty:\n",
-    "        else if ( previousNode == null )\n",
+    "        else if ( prevNode == null )\n",
     "        {\n",
     "\n",
     "            // Then we must have the case where the head node was removed,\n",
@@ -599,7 +618,7 @@
     "\n",
     "            // In that case, uncouple the target node by redirecting \n",
     "            // it's previous and next node pointers, respectively\n",
-    "            previousNode.NextNode = targetNode.NextNode;\n",
+    "            prevNode.NextNode = targetNode.NextNode;\n",
     "\n",
     "        }\n",
     "\n",
@@ -611,7 +630,7 @@
     "\n",
     "            // Then we must designate the specified previous node\n",
     "            // as being the new tail of the list\n",
-    "            this.tail = previousNode;\n",
+    "            this.tail = prevNode;\n",
     "\n",
     "        } \n",
     "\n",
@@ -1213,7 +1232,7 @@
    },
    "outputs": [],
    "source": [
-    "linkedIntegerList.InsertAt(3, 2)"
+    "linkedIntegerList.InsertAt(3, 2);"
    ]
   },
   {
@@ -1295,10 +1314,249 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 -> 2 -> 4 -> 5 -> 6 -> 7 -> Index: 6 is invalid\n",
-      "\n",
-      "Stack Trace:    at Submission#2.DynamicList`1.get_Item(Int32 index)\n",
-      "0"
+      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
+   "source": [
+    "linkedIntegerList.PrintList();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "linkedIntegerList.InsertAt(3, linkedIntegerList.NodeCount - 1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>8</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "linkedIntegerList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 3"
+     ]
+    }
+   ],
+   "source": [
+    "linkedIntegerList.PrintList();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "linkedIntegerList.InsertAt(3, 0);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>9</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "linkedIntegerList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 -> 1 -> 2 -> 3 -> 4 -> 5 -> 6 -> 7 -> 3"
      ]
     }
    ],
