--- a/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
@@ -1887,7 +1887,11 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
      },
      {
@@ -1899,8 +1903,56 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
