modified:   16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb

--- a/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
@@ -1717,7 +1717,7 @@
     }
    },
    "source": [
-    "Now let's delete the last occurence of the stuff we just inserted by referencing it's node index.\n",
+    "Now let's delete the last occurrence of the stuff we just inserted by referencing it's node index.\n",
     "   \n",
     "Observe that, upon doing so, the node element value which was deleted at the specified index will be returned:"
    ]
@@ -1738,7 +1738,7 @@
    },
    "outputs": [],
    "source": [
-    "linkedIntegerList.RemoveAt( linkedIntegerList.NodeCount - 1 );"
+    "linkedIntegerList.RemoveAt( linkedIntegerList.NodeCount - 1 )"
    ]
   },
   {
@@ -2103,6 +2103,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
