--- a/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
@@ -2101,7 +2101,11 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
      },
      {
