modified:   16. Linear Data Structures/Built-In Classes.ipynb modified:   16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb modified:   16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb modified:   16. Linear Data Structures/The List ADT.ipynb

--- a/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Dynamic (Linked) Lists.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## Lists\n",
+    "## Custom Implementations\n",
     "### Linked Lists (Dynamic Implementation)\n",
     "---"
    ]
