--- a/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Custom Implementations/Static (Array-based) Lists.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## Lists\n",
+    "## Custom Implementations\n",
     "### Static Lists (An Array-based Implementation)\n",
     "---"
    ]
