--- a/16. Linear Data Structures/Built-In Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes.ipynb
@@ -26,8 +26,7 @@
     }
    },
    "source": [
-    "## Lists\n",
-    "### Built-In Classes\n",
+    "## Built-In Classes\n",
     "---"
    ]
   },
@@ -58,7 +57,22 @@
     }
    },
    "source": [
-    "While it is possible to provide a custom implementation for List structures, such as previously demonstrated with [Static (Array-Based) Lists](../Custom%20Implementations/Static%20(Array-based)%20Lists.ipynb), $C\\#$ comes with a **Built-In class**, which shares much of the same functionality, known as the `ArrayList` class "
+    "Though it is possible to provide a custom implementation for List structures, such as previously demonstrated with [Static (Array-Based) Lists](../Custom%20Implementations/Static%20(Array-based)%20Lists.ipynb), $C\\#$ comes with a **Built-In class**, which shares much of the same functionality, known as the `ArrayList` class."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "However, a very important distinction to consider regarding the `ArrayList` class is that, although it is also **based on a dynamically extensible array**, it does **not enforce a uniform data type**. This enables us to hold heterogeneous collections of objects within a single instance of the class."
    ]
   },
   {
