--- a/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The ArrayList Class.ipynb
@@ -88,7 +88,7 @@
     }
    },
    "source": [
-    "#### Constructors"
+    "### Constructors"
    ]
   },
   {
@@ -164,7 +164,7 @@
     }
    },
    "source": [
-    "#### Properties"
+    "### Properties"
    ]
   },
   {
@@ -280,7 +280,7 @@
     }
    },
    "source": [
-    "#### Methods"
+    "### Methods"
    ]
   },
   {
@@ -786,24 +786,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
-      "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
-     },
-     {
       "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
+      "name": "csharp"
      }
     ]
    }
